--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Business-focused data professional with a proven ability to translate complex re
 									<p>In this project, I created a scalable Real - Time Data Pipeline for MarketPulse to stream stock market data from multiple exchanges using Kafka, to ensure
 										data accuracy, timeliness and availability delivering live market data directly to clients using PowerBI.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://github.com/Gitjeoma/MarketPulseAnalysis" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/Gitjeoma/MarketPulseAnalysis" class="button large">View Project</a></li>
 								</ul>
@@ -201,7 +201,7 @@ Business-focused data professional with a proven ability to translate complex re
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; IA Portfolio 2026</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
@@ -216,4 +216,5 @@ Business-focused data professional with a proven ability to translate complex re
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
