--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>The Data Engineer Portfolio<br />
+						<h1>My Data Engineering Portfolio<br />
 							</h1>
 						<p>Data Engineer with 10+ years of professional work experience across healthcare, education, manufacturing, and food industries. Skilled in developing robust data pipelines, cloud-based data warehouses, and ETL/ELT processes to deliver reliable, high-quality data for analytics and business intelligence. Strong technical expertise in SQL, Python, Apache Spark, Airflow, Databricks, and cloud platforms including AWS, Azure, and GCP.
 Business-focused data professional with a proven ability to translate complex requirements into scalable data solutions that improve operational efficiency, data governance, and decision-making. Experienced in collaborating with cross-functional teams to enhance data quality, automate workflows, and deliver measurable impact through data-driven insights.
@@ -218,3 +218,4 @@ Business-focused data professional with a proven ability to translate complex re
 	</body>
 
 </html>
+
